hub/infra/monitoring/admin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  annotations:
    ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^([^.?]*[^/])$ $1/ redirect;
    namespace: default
spec:
  ingressClassName: admin-nginx
  tls:
    - hosts:
        - admin.hub.esante.gouv.fr
      secretName: admin-cert
  rules:
    - host: admin.hub.esante.gouv.fr
      http:
        paths:
          - path: /prometheus(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
          - path: /alertmanager(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: alertmanager-operated
                port:
                  number: 9093
          - path: /grafana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
