hub/infra/monitoring/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-admin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
    # Rewrite all URLs not ending with a segment containing . or ? with a trailing slash
    # So basically we are rewriting all folder names with a trailing slash
    # Ref.: https://stackoverflow.com/a/65941913
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^([^.?]*[^/])$ $1/ redirect;
    namespace: default
spec:
  ingressClassName: nginx-admin
  tls:
    - hosts:
        - admin.hub.esante.gouv.fr
      secretName: admin-cert
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
          - path: /alertmanager(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: alertmanager-operated
                port:
                  number: 9093
          - path: /grafana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
